--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'app/**'
   repository_dispatch:
-    types: [trigger-app-workflow]
+    types: [infra-completed]
 
 jobs:
   app:
@@ -15,6 +15,5 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Run echo
-        run: echo "Hello, APP"
+      - name: Run app workflow steps
+        run: echo "Executing app workflow"
