--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -1,45 +1,33 @@
 name: infra
-
 on:
-  push:
+  pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened]
     paths:
-      - 'terraform/**'
+     - 'terraform/**'
 
 jobs:
-  infra:
+  example-job:
     runs-on: ubuntu-latest
-    outputs:
-      app-changed: ${{ steps.check_app_changes.outputs.app-changed }} # このジョブの出力として、'app/**' パスの変更があったかどうかの結果を設定しています
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2
 
-      - name: Check for 'app/**' changes
-        id: check_app_changes
+      - name: Check for excluded paths
+        id: check_paths
         run: |
-          # 'app/**' パスに変更があるかどうかをチェックし、結果を環境変数に設定
-          echo "app-changed=$(git diff --name-only HEAD^ HEAD | grep -q 'app/' && echo 'true' || echo 'false')" >> $GITHUB_ENV
-          echo "::set-output name=app-changed::$app_changed" # ステップの出力として 'app-changed' を設定
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev 'terraform/apim/(a|b|c|d|e)/' > /dev/null; then
+            echo "Non-excluded paths changed."
+            echo "run-job=true" >> $GITHUB_ENV
+          else
+            echo "Only excluded paths changed."
+            echo "run-job=false" >> $GITHUB_ENV
+          fi
 
-      - name: Run some infra steps
+      - name: Run tasks if non-excluded paths changed
+        if: env.run-job == 'true'
         run: |
-          echo "Starting infra steps"
-          sleep 30
-          echo "Completed infra steps" # インフラ関連のステップが30秒間実行された後に完了
+          echo "Running tasks based on changes in non-excluded paths"
+          # ここに実行するスクリプトを追加
 
-      - name: Dispatch event to trigger app workflow
-        if: env.app-changed == 'true' # 'app/**' パスに変更がある場合のみ次のステップを実行
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }} # GitHub API との認証に使用するトークン
-          script: |
-            # 'infra-completed' イベントタイプで repository_dispatch イベントを発行
-            github.rest.repos.createDispatchEvent({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              event_type: 'infra-completed',
-              client_payload: { }
-            });
