--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -14,8 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Check for excluded paths
-        id: check_paths
+      - name: Check for changes in non-excluded paths
         run: |
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev 'terraform/apim/(a|b|c|d|e)/' > /dev/null; then
             echo "Non-excluded paths changed."
