--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -1,9 +1,8 @@
 name: infra
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types: [opened, synchronize, reopened]
     paths:
      - 'terraform/**'
 
