--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -12,12 +12,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # リポジトリの全履歴をフェッチ
 
       - name: Check for changes in non-excluded paths
         run: |
           echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
           git diff --name-only ${{ github.event.before }} ${{ github.sha }}
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev 'terraform/apim/(a|b|c|d|e)/'; then
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev 'terraform/apim/(a|b|c|d|e)/' > /dev/null; then
             echo "Non-excluded paths changed."
             echo "run-job=true" >> $GITHUB_ENV
           else
