--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
           git diff --name-only ${{ github.event.before }} ${{ github.sha }}
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev 'terraform/apim/(a|b|c|d|e)/.*' > /dev/null; then
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev '^terraform/apim/(a|b|c|d|e)/' > /dev/null; then
             echo "Non-excluded paths changed."
             echo "run-job=true" >> $GITHUB_ENV
           else
