--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -13,23 +13,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # リポジトリの全履歴をフェッチ
 
       - name: Check for changes in non-excluded paths
         run: |
           echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
           git diff --name-only ${{ github.event.before }} ${{ github.sha }}
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -Ev '^terraform/apim/(a|b|c|d|e)/' > /dev/null; then
-            echo "Non-excluded paths changed."
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -qE '^terraform/apim/(a|b|c|d|e)/' > /dev/null; then
+            echo "変更が検出されました。"
             echo "run-job=true" >> $GITHUB_ENV
           else
-            echo "Only excluded paths changed."
+            echo "変更が検出されませんでした。"
             echo "run-job=false" >> $GITHUB_ENV
           fi
 
-      - name: Run tasks if non-excluded paths changed
-        if: env.run-job == 'true'
+      - name: Run tasks 
+        if: env.run-job == 'false'
         run: |
           echo "Running tasks based on changes in non-excluded paths"
           # ここに実行するスクリプトを追加
