--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -1,8 +1,9 @@
 name: infra
 on:
-  push:
+  pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened]
     paths:
      - 'terraform/**'
   workflow_dispatch:
@@ -10,6 +11,8 @@ on:
 jobs:
   example-job:
     runs-on: ubuntu-latest
+    outputs:
+      run-job: ${{ steps.check-change.outputs.run-job }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -17,19 +20,21 @@ jobs:
           fetch-depth: 0 
 
       - name: Check for changes in non-excluded paths
+        id: check-change
         run: |
           echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
           git diff --name-only ${{ github.event.before }} ${{ github.sha }}
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -qE '^terraform/apim/(a|b|c|d|e)/' > /dev/null; then
             echo "変更が検出されました。"
-            echo "run-job=true" >> $GITHUB_ENV
+            echo "::set-output name=run-job::true"
           else
             echo "変更が検出されませんでした。"
-            echo "run-job=false" >> $GITHUB_ENV
-          fi
-
-      - name: Run tasks 
-        if: env.run-job == 'false'
-        run: |
-          echo "Running tasks based on changes in non-excluded paths"
-          # ここに実行するスクリプトを追加
+            echo "::set-output name=run-job::false"
+          
+  job2:
+    needs: example-job
+    runs-on: ubuntu-latest
+    if: needs.example-job.outputs.run-job == 'true'
+    steps:
+      - name: Echo app
+        run: echo "app"
