--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   infra-job:
     runs-on: ubuntu-latest
+    outputs:
+      run-job: ${{ steps.check_changes.outputs.run-job }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -17,33 +19,28 @@ jobs:
           fetch-depth: 0 
 
       - name: Check for changes in non-excluded paths
+        id: check_changes
         run: |
           echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
           git diff --name-only ${{ github.event.before }} ${{ github.sha }}
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -qE '^terraform/apim/(a|b|c|d|e)/' > /dev/null; then
             echo "変更が検出されました。"
             echo "run-job=true" >> $GITHUB_ENV
+            echo "run-job=true" >> $GITHUB_OUTPUT
           else
             echo "変更が検出されませんでした。"
             echo "run-job=false" >> $GITHUB_ENV
+            echo "run-job=false" >> $GITHUB_OUTPUT
           fi
 
-      - name:  Echo app
-        if: env.run-job == 'true'
+      - name: Echo infra
+        if: steps.check_changes.outputs.run-job == 'true'
         run: echo "infra"
 
-      - name: Check for changes in non-excluded paths
-        run: |
-          echo "Changes between ${{ github.event.before }} and ${{ github.sha }}"
-          git diff --name-only ${{ github.event.before }} ${{ github.sha }}
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -qE '^terraform/' > /dev/null; then
-            echo "変更が検出されました。"
-            echo "run-job=true" >> $GITHUB_ENV
-          else
-            echo "変更が検出されませんでした。"
-            echo "run-job=false" >> $GITHUB_ENV
-          fi
-
-      - name:  Echo app
-        if: env.run-job == 'true'
-        run: echo "app"           
+  app-job:
+    runs-on: ubuntu-latest
+    needs: infra-job
+    steps:
+      - name: Echo app
+        if: needs.infra-job.outputs.run-job == 'true'
+        run: echo "app"
