--- a/.github/workflows/app2.yml
+++ b/.github/workflows/app2.yml
@@ -18,30 +18,37 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Check for changes in specific paths
+      - name: Determine if workflow should run
+        id: should_run
         run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "workflow_dispatch event triggered."
-            echo "run-deploy-step=true" >> $GITHUB_ENV
+          # 'workflow_dispatch'イベントか'Infra Workflow'が成功した場合にのみ実行
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] || [ "${{ github.event.workflow_run.conclusion }}" = "success" ]; then
+            echo "Workflow should run."
+            echo "SHOULD_RUN=true" >> $GITHUB_ENV
           else
-            # mainブランチの直前のコミットを取得
-            MAIN_BEFORE_LAST_COMMIT=$(git rev-parse origin/main^)
-
-            # 現在のワークフローでのHEADコミットを取得
-            CURRENT_COMMIT=$(git rev-parse HEAD)
-
-            echo "Main branch before last commit: $MAIN_BEFORE_LAST_COMMIT"
-            echo "Current commit: $CURRENT_COMMIT"
-
-            # mainブランチの直前のコミットと現在のコミットの間で変更をチェック
-            if git diff --name-only $MAIN_BEFORE_LAST_COMMIT $CURRENT_COMMIT | grep -qE 'infra/'; then
-              echo "Changes detected in 'infra/' path."
-              echo "run-deploy-step=true" >> $GITHUB_ENV
-            else
-              echo "No changes detected in 'infra/' path."
-              echo "run-deploy-step=false" >> $GITHUB_ENV
-            fi
+            echo "Workflow should not run."
+            echo "SHOULD_RUN=false" >> $GITHUB_ENV
           fi
+
+      - name: Check for changes in 'infra/' path
+        if: env.SHOULD_RUN == 'true'
+        run: |
+          # mainブランチの直前のコミットと現在のコミットの間で変更をチェック
+          MAIN_BEFORE_LAST_COMMIT=$(git rev-parse origin/main^)
+          CURRENT_COMMIT=$(git rev-parse HEAD)
+
+          if git diff --name-only $MAIN_BEFORE_LAST_COMMIT $CURRENT_COMMIT | grep -qE 'infra/'; then
+            echo "Changes detected in 'infra/' path."
+            echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
+          else
+            echo "No changes detected in 'infra/' path."
+            echo "CHANGES_DETECTED=false" >> $GITHUB_ENV
+          fi
+
+      - name: Deploy App
+        if: env.CHANGES_DETECTED == 'true'
+        run: |
+          echo "Deploying Infra"
 
       - name: Display App
         if: env.run-deploy-step == 'true'
