--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -12,27 +12,14 @@ on:
 jobs:
   deploy-app:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Determine if workflow should run
-        id: should_run
-        run: |
-          # 'workflow_dispatch'イベントか'Infra Workflow'が成功した場合にのみ実行
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ] || [ "${{ github.event.workflow_run.conclusion }}" = "success" ]; then
-            echo "Workflow should run."
-            echo "SHOULD_RUN=true" >> $GITHUB_ENV
-          else
-            echo "Workflow should not run."
-            echo "SHOULD_RUN=false" >> $GITHUB_ENV
-          fi
-
       - name: Check for changes in 'infra/' path
-        if: env.SHOULD_RUN == 'true'
+        id: check_changes_in_infra
         run: |
           # mainブランチの直前のコミットと現在のコミットの間で変更をチェック
           MAIN_BEFORE_LAST_COMMIT=$(git rev-parse origin/main^)
