--- a/.github/workflows/app2.yml
+++ b/.github/workflows/app2.yml
@@ -38,6 +38,6 @@ jobs:
           fi
 
       - name: Deploy App
-        if: env.CHANGES_DETECTED == 'true'
+        if: env.run-job == 'true'
         run: |
           echo "Deploying Infra"
