--- a/.github/workflows/app2.yml
+++ b/.github/workflows/app2.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   deploy-app:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -24,18 +23,30 @@ jobs:
           # 'workflow_dispatch'イベントでの手動実行時は常に実行
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "run-job=true" >> $GITHUB_ENV
+          else
+            # Infra Workflowが成功した場合のみファイルの差分をチェック
+            if [ "${{ github.event.workflow_run.conclusion }}" = "success" ]; then
+              MAIN_BEFORE_LAST_COMMIT=$(git rev-parse origin/main^)
+              CURRENT_COMMIT=$(git rev-parse HEAD)
 
-            # mainブランチの直前のコミットと現在のコミットの間で変更をチェック
-            MAIN_BEFORE_LAST_COMMIT=$(git rev-parse origin/main^)
-            CURRENT_COMMIT=$(git rev-parse HEAD)
-          
-            if [ "${{ github.event.workflow_run.conclusion }}" = "success" ] && \
-               git diff --name-only $MAIN_BEFORE_LAST_COMMIT $CURRENT_COMMIT | grep -qE 'infra/'; then
-              echo "run-job=true" >> $GITHUB_ENV
+              if git diff --name-only $MAIN_BEFORE_LAST_COMMIT $CURRENT_COMMIT | grep -qE 'infra/'; then
+                echo "Changes detected in 'infra/' path."
+                echo "run-job=true" >> $GITHUB_ENV
+              else
+                echo "No changes detected in 'infra/' path."
+                echo "run-job=false" >> $GITHUB_ENV
+              fi
             else
+              echo "Infra Workflow did not succeed."
               echo "run-job=false" >> $GITHUB_ENV
             fi
           fi
+
+      - name: Deploy App
+        if: env.run-job == 'true'
+        run: |
+          echo "Deploying Infra"
+
 
       - name: Deploy App
         if: env.run-job == 'true'
